--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </ul>
     
     <p>Hope you enjoyed our website. Fund our website by visiting Givememoney.com.</p>
-     <p>for further inquires text us at +1 (613) 889 5947 or send us an email.</p>
+     <p>for further inquires text us at +1 (613) 889 5947 or send us an email..</p>
     
   </footer>
 </html>
